overlays/tracing/virtualservice/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tracing
  namespace: default
spec:
  gateways:
    - app-gateway
  hosts:
    - "*"
  http:
    - match:
        - headers:
            host:
              prefix: az-kiali
      name: prometheus
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
